<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gujarat">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.diyainfotech.covid19.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.diyainfotech.covid19.ui.world.WorldFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.diyainfotech.covid19.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_gujarat"
        android:name="com.diyainfotech.covid19.ui.news.GujaratFragment"
        android:label="@string/title_gujarat"
        tools:layout="@layout/fragment_webview" />
</navigation>
