<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/world_title"
                    android:textColor="#343a40"
                    android:textSize="@dimen/india_title" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5sp"
                android:layout_weight="0.30">

                <TextView
                    android:id="@+id/update_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/last_update"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/updateTimeText"
                    android:textSize="@dimen/india_sub_title" />

                <TextView
                    android:id="@+id/lastUpdateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/update_title"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/lastUpdateTimeText"
                    android:textSize="@dimen/india_sub_title" />
            </RelativeLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/world_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_layout"
            android:layout_margin="5dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.6"
                        android:background="@color/confirmedBackground"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_confirmed_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/confirmed"
                            android:textColor="@color/confirmedText"
                            android:textSize="@dimen/india_state_type_name" />


                        <TextView
                            android:id="@+id/txt_confirmed_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_confirmed_case"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/confirmedText"
                            android:textSize="@dimen/india_state_type_value" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:layout_weight="1"

                    android:padding="10dp"
                    app:cardBackgroundColor="@color/recoveredBackground"
                    app:cardCornerRadius="5sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_recovered_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/recovered"
                            android:textColor="@color/recoveredText"
                            android:textSize="@dimen/india_state_type_name" />

                        <TextView
                            android:id="@+id/txt_recovered_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_recovered_case"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/recoveredText"
                            android:textSize="@dimen/india_state_type_value" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/deceasedBackground"
                    app:cardCornerRadius="5sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_deceased_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/deceased"
                            android:textColor="@color/deceasedText"
                            android:textSize="@dimen/india_state_type_name" />

                        <TextView
                            android:id="@+id/txt_deceased_case"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_deceased_case"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/deceasedText"
                            android:textSize="@dimen/india_state_type_value" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/worldDataRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/world_layout" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>