<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:background="@color/confirmedBackground"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_confirmed_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/confirmedText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_confirmed_case_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/title_confirmed_case"
                        android:textColor="@color/confirmedText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_confirmed_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/txt_confirmed_case_delta"
                        android:textColor="@color/confirmedText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardBackgroundColor="@color/activeBackground"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_active_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/activeText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_active_case_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/title_active_case"
                        android:textColor="@color/activeText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_active_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/txt_active_case_delta"
                        android:textColor="@color/activeText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"

                android:padding="10dp"
                app:cardBackgroundColor="@color/recoveredBackground"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_recovered_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/recoveredText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_recovered_case_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/title_recovered_case"
                        android:textColor="@color/recoveredText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_recovered_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/txt_recovered_case_delta"
                        android:textColor="@color/recoveredText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardBackgroundColor="@color/deceasedBackground"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_deceased_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/deceasedText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_deceased_case_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/title_deceased_case"
                        android:textColor="@color/deceasedText"
                        android:textSize="@dimen/india_state_type_name" />

                    <TextView
                        android:id="@+id/txt_deceased_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/txt_deceased_case_delta"
                        android:textColor="@color/deceasedText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>