<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/areaCellCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/area_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:padding="5sp"
            android:textColor="@color/stateNameText"
            android:textSize="@dimen/india_state_name" />

        <LinearLayout
            android:id="@+id/state_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_name"
            android:layout_marginBottom="10dp"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:background="@color/confirmedBackground"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_confirmed_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/confirmed"
                        android:textColor="@color/confirmedText"
                        android:textSize="@dimen/india_state_type_name" />


                    <TextView
                        android:id="@+id/txt_confirmed_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_confirmed_case"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/confirmedText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"

                android:padding="10dp"
                app:cardBackgroundColor="@color/recoveredBackground"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_recovered_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/recovered"
                        android:textColor="@color/recoveredText"
                        android:textSize="@dimen/india_state_type_name" />


                    <TextView
                        android:id="@+id/txt_recovered_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_recovered_case"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/recoveredText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardBackgroundColor="@color/deceasedBackground"
                app:cardCornerRadius="5sp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/title_deceased_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/deceased"
                        android:textColor="@color/deceasedText"
                        android:textSize="@dimen/india_state_type_name" />


                    <TextView
                        android:id="@+id/txt_deceased_case"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_deceased_case"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/deceasedText"
                        android:textSize="@dimen/india_state_type_value" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sub_area_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_data_layout"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sub_area_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp" />
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>